--- a/qx.ini
+++ b/qx.ini
@@ -1,4 +1,4 @@
-
+#forked from https://github.com/nameless3721/nash/blob/master/yoyu.ini
 ;设置规则标志位
 surge_ruleset=UnblockNeteaseMusic,rules/yoyuNeteaseMusic.list
 surge_ruleset=DIRECT,rules/LocalAreaNetwork.list
